--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
   <meta name="author" content="Łukasz Holeczek">
   <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
 	<link rel="shortcut icon" href="assets/favicon.ico">
-	<title>CoreUI - Free Angular Admin Template</title>
+	<title>PeerShot</title>
 </head>
 <body class="app">
-  <!-- App Loading... -->
+  <!-- App Loading... --> 
 </body>
 </html>
